# fbpcf

./: CHANGELOG.md  CONTRIBUTING.md  README.md  build-docker.sh  run-aggregator-sample.sh  run-calculator-sample.sh  run-millionaire-sample.sh
.github/workflows/: aws-s3-publish.yml  bolt-docker-test.yml  build-and-publish-fbpcf-image.yml  continuous-tests-nonblocking.yml  continuous_tests_nonblocking.yml  create-hotfix.yml  docker-publish.yml  emp-publish.yml  folly-publish.yml  gcp-publish.yml  publish-hotfix.yml  tests.yml
docker/: CMakeLists.txt  Dockerfile  Dockerfile.centos  Dockerfile.ubuntu  centos-cmake-fix.sh  dockerfile  install_awssdk.sh  install_dependencies.sh  install_emp.sh  install_folly.sh  install_private_lift.sh
docker/aws-s3-core/: Dockerfile  Dockerfile.centos  Dockerfile.ubuntu
docker/cmake/: fbpcf.cmake  testing.cmake
docker/emp/: Dockerfile  Dockerfile.centos  Dockerfile.ubuntu
docker/folly/: Dockerfile  Dockerfile.centos  Dockerfile.ubuntu
docker/google-cloud-cpp/: Dockerfile.ubuntu
docker/utils/: get_make_options.sh
docs/: DeveloperGuide.md  PrivateLift.md  changlog.md
docs/v1/: README.md
docs/v2/: DESIGN.md  GUIDE.md
emp_test/: EMPOperator.hpp  EMPOperatorTest.cpp  EMPOperatorTestConfig.hpp
example/billionaire_problem/: BillionaireProblemGame.h  BillionaireProblemGame_impl.h  main.cpp
example/billionaire_problem/test/: BillionaireProblemGameTest.cpp
example/edit_distance/: AsciiString.h  AsciiString_impl.h  EditDistanceApp.h  EditDistanceApp_impl.h  EditDistanceCalculator.h  EditDistanceCalculator_impl.h  EditDistanceGame.h  EditDistanceInputReader.cpp  EditDistanceInputReader.h  EditDistanceResults.h  InputProcessor.h  InputProcessor_impl.h  MPCTypes.h  MainUtil.h  Util.h  Validator.cpp  Validator.h  main.cpp  validatorMain.cpp
example/edit_distance/data_gen/: dictionary.txt  edit_distance_200_params.csv  edit_distance_200_player_1_input.csv  edit_distance_200_player_2_input.csv  edit_distance_200_results.csv  (+2 more)
example/millionaire/: MillionaireApp.cpp  MillionaireApp.h  MillionaireGame.h  main.cpp
fbpcf/aws/: AwsSdk.cpp  AwsSdk.h  MockS3Client.h  S3Util.cpp  S3Util.h
fbpcf/common/: FunctionalUtil.h  VectorUtil.h
fbpcf/engine/: DummySecretShareEngine.h  DummySecretShareEngineFactory.h  ISecretShareEngine.h  ISecretShareEngineFactory.h  SecretShareEngine.cpp  SecretShareEngine.h  SecretShareEngineFactory.h
fbpcf/exception/: AwsException.h  EmpException.h  ExceptionBase.cpp  ExceptionBase.h  GcpException.h  PcfException.h  exceptions.h
fbpcf/frontend/: Bit.h  BitString.h  BitString_impl.h  Bit_impl.h  Int.h  Int_impl.h  MPCTypes.h  mpcGame.h  util.h
fbpcf/gcp/: GCSFileManager.cpp  GCSFileManager.h  GCSInputStream.cpp  GCSInputStream.h  GCSUtil.cpp  GCSUtil.h  GcpException.h  MockGCSClient.h
fbpcf/io/: FileManagerUtil.cpp  FileManagerUtil.h  GCSFileManager.cpp  GCSFileManager.h  GCSInputStream.cpp  GCSInputStream.h  IFileManager.h  IInputStream.h  LocalFileManager.cpp  LocalFileManager.h  LocalInputStream.cpp  LocalInputStream.h  MockFileManager.h  S3FileManager.cpp  S3FileManager.h  S3InputStream.cpp  S3InputStream.h
fbpcf/mpc/: EmpApp.h  EmpGame.h  EmpTestUtil.cpp  EmpTestUtil.h  EmpVector.h  IMpcGame.h  MpcAppExecutor.h  QueueIO.cpp  QueueIO.h
fbpcf/perf/: PerfUtil.h
fbpcf/scheduler/: EagerScheduler.cpp  EagerScheduler.h  EagerSchedulerFactory.h  IAllocator.h  IArithmeticScheduler.h  IScheduler.h  ISchedulerFactory.h  IWireKeeper.h  LazyScheduler.cpp  LazyScheduler.h  LazySchedulerFactory.h  NetworkPlaintextScheduler.cpp  NetworkPlaintextScheduler.h  NetworkPlaintextSchedulerFactory.h  PlaintextScheduler.cpp  PlaintextScheduler.h  PlaintextSchedulerFactory.h  SchedulerHelper.h  UnorderedMapAllocator.h  VectorArenaAllocator.h  WireKeeper.cpp  WireKeeper.h
fbpcf/system/: CpuUtil.cpp  CpuUtil.h
fbpcf/test/: TestHelper.h
fbpcf/util/: IMetricRecorder.h  MetricCollector.h
lift/aggregator/: AggregatorApp.cpp  AggregatorApp.h  AggregatorAppTest.cpp  KAnonymityAggregatorApp.cpp  KAnonymityAggregatorApp.h  KAnonymityLiftAggregationGame.h  KAnonymityLiftAggregationGameTest.cpp  LiftAggregationGame.h  LiftAggregationGameTest.cpp  MetricsMapper.cpp  MetricsMapper.h  MetricsMapperTest.cpp  main.cpp  main_kanon.cpp
lift/calculator/: CalculatorApp.cpp  CalculatorApp.h  CalculatorApp.hpp  CalculatorGame.h  CalculatorGameTest.cpp  InputData.cpp  InputData.h  InputDataTest.cpp  OutputMetrics.h  OutputMetrics.hpp  OutputMetricsData.h  main.cpp
lift/common/: Csv.cpp  Csv.h  CsvTest.cpp  EmpOperationUtil.h  EmpOperationUtil.hpp  EncryptedLiftMetrics.cpp  EncryptedLiftMetrics.h  GroupedEncryptedLiftMetrics.cpp  GroupedEncryptedLiftMetrics.h  GroupedLiftMetrics.cpp  GroupedLiftMetrics.h  GroupedLiftMetricsTest.cpp  LiftMetrics.cpp  LiftMetrics.h  LiftMetricsTest.cpp  PrivateData.h  SecretSharing.h  SecretSharing.hpp
pcf/aws/: AwsSdk.cpp  AwsSdk.h  AwsSdkTest.cpp  MockS3Client.h  MockS3ClientTest.cpp  S3Util.cpp  S3Util.h  S3UtilTest.cpp
pcf/common/: FunctionalUtil.h  FunctionalUtilTest.cpp  VectorUtil.h  VectorUtilTest.cpp
pcf/exception/: AwsException.h  EmpException.h  ExceptionBase.cpp  ExceptionBase.h  PcfException.h
pcf/io/: FileManagerUtil.cpp  FileManagerUtil.h  FileManagerUtilTest.cpp  IFileManager.h  IInputStream.h  LocalFileManager.cpp  LocalFileManager.h  LocalFileManagerTest.cpp  LocalInputStream.cpp  LocalInputStream.h  MockFileManager.h  S3FileManager.cpp  S3FileManager.h  S3FileManagerTest.cpp  S3InputStream.cpp  S3InputStream.h
pcf/mpc/: EmpApp.h  EmpGame.h  EmpTestUtil.cpp  EmpTestUtil.h  EmpVector.h  IMpcGame.h  MpcAppExecutor.h  QueueIO.cpp  QueueIO.h
pcf/perf/: PerfUtil.h  PerfUtilTest.cpp
pcf/system/: CpuUtil.cpp  CpuUtil.h
test/aws/: AwsSdkTest.cpp  MockS3ClientTest.cpp  S3UtilTest.cpp
test/common/: FunctionalUtilTest.cpp  VectorUtilTest.cpp
test/emp/: EMPOperator.hpp  EMPOperatorTest.cpp
test/io/: FileManagerUtilTest.cpp  LocalFileManagerTest.cpp  S3FileManagerTest.cpp
test/mpc/: EmpVectorTest.cpp  MpcAppExecutorTest.cpp  QueueIOTest.cpp
test/perf/: PerfUtilTest.cpp
(+782 files in other folders)
